--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,6 @@
   "main": "camelCaseToHuman.js",
   "author": "John Dennis Pedrie",
   "dependencies": {
-    "angular": "~1.0.6",
+    "angular": "~1.0.6"
   }
 }
